chore: dummy commit to test git config

--- a/src/app/comment-list/comment-list.component.html
+++ b/src/app/comment-list/comment-list.component.html
@@ -1,7 +1,6 @@
 <ul class="flex flex-col gap-2 mt-4 overflow-y-auto px-2 max-h-[400px] overflow-y-auto">
   <li *ngFor="let comment of comments"
-  class="list-none bg-white shadow-md rounded
-  transition ease-in-out delay-50 hover:-translate-y-0.5 hover:scale-101 hover:bg-gray-200
+  class="list-none bg-white shadow-md rounded transition ease-in-out delay-50 hover:-translate-y-0.5 hover:scale-101 hover:bg-gray-200
   ">
     <div class="px-4 py-2 bg-on-primary rounded-t">
       <p> {{ comment.creatorName }} </p>
