--- a/src/app/comment-list/comment-list.component.html
+++ b/src/app/comment-list/comment-list.component.html
@@ -1,4 +1,4 @@
-<ul class="flex flex-col gap-2 mt-4 overflow-y-auto px-2 max-h-[400px] overflow-y-auto">
+<ul class="flex flex-col gap-2 mt-4">
   <li *ngFor="let comment of comments"
   class="list-none bg-white shadow-md rounded transition ease-in-out delay-50 hover:-translate-y-0.5 hover:scale-101 hover:bg-gray-200
   ">
