--- a/src/app/post-list-item/post-list-item.component.html
+++ b/src/app/post-list-item/post-list-item.component.html
@@ -11,7 +11,7 @@
       {{ post.content }}
     </div>
     <span class="text-sm">
-      Comments: {{ post.commentsCount }}
+      Comments: {{ post.comments.length }}
     </span>
   </div>
   </a>
