--- a/src/app/post-list/post-list.component.html
+++ b/src/app/post-list/post-list.component.html
@@ -1,4 +1,3 @@
-
-  <ul class="flex flex-col gap-4">
-    <app-post-list-item *ngFor="let post of posts" [post]="post"></app-post-list-item>
-  </ul>
+<ul class="flex flex-col gap-4 h-full overflow-y-auto">
+  <app-post-list-item *ngFor="let post of posts" [post]="post"></app-post-list-item>
+</ul>
