ci: added semantic release workflow

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="text-sm text-center mt-2">
-  Checkout the repository at <a class="text-on-primary" href="https://github.com/topiaspeiponen/forum-io" target="_blank">GitHub</a>
+  Checkout the repository at <a class="text-on-primary" href="https://github.com/topiaspeiponen/forum-io" target="_blank">(GitHub)</a>
 </div>
 <header class="px-4 xl:mx-auto mt-2 mb-5 py-4 w-full xl:w-base bg-black
   text-on-primary shadow-md rounded flex flex-row">
