--- a/src/app/post-list-item/post-list-item.component.html
+++ b/src/app/post-list-item/post-list-item.component.html
@@ -1,9 +1,9 @@
 <li
-  class="list-none bg-white shadow-md rounded
+  class="list-none bg-secondary-container shadow-md rounded
   transition ease-in-out delay-50 hover:-translate-y-0.5 hover:scale-101 hover:bg-gray-200
   ">
   <a routerLink="post/{{post.id}}">
-  <div class="px-4 py-2 bg-on-primary rounded-t">
+  <div class="px-4 py-2 bg-accent-container rounded-t">
     <h3> {{ post.title }} </h3>
   </div>
   <div class="p-4">
